--- a/themes/rms/templates/views-view.html.twig
+++ b/themes/rms/templates/views-view.html.twig
@@ -34,7 +34,7 @@
       <li class="home-breadcrumb">
         <a href="insurance">
           <!-- <img class="icon" src="{{ theme_path }}/_assets/images/icon-home.svg"/> -->
-          <span class="default-title">Insurance Records</span>
+          <span class="default-title">Insurance Recordsz</span>
           <div class="page-desc">
             <p></p>
           </div>
